clean up; more correct choosing of prefixes